force-app/main/default/objects/genesis__Application_Document_Category__c/genesis__Application_Document_Category__c.object-meta.xml
<CustomObject>
    <label>Application Document Category</label>
    <nameField>
        <label>Application Document Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Document Category</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>