force-app/main/default/objects/genesis__Application_Document_Category__c/fields/Application_Email__c.field-meta.xml
<CustomField>
    <fullName>Application_Email__c</fullName>
    <formula>genesis__Application__r.Application_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Email</label>
    <type>Text</type>
</CustomField>