force-app/main/default/objects/genesis__Application_Document_Category__c/fields/Borrower_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Borrower_s_Email__c</fullName>
    <description>/* Created By Nupur */

------ For Email Alerts --pending_document_reminder.liquid</description>
    <label>Borrower&apos;s Email</label>
    <type>Email</type>
</CustomField>