force-app/main/default/objects/genesis__Application_Document_Category__c/fields/Borrower_s_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_s_First_Name__c</fullName>
    <formula>genesis__Application__r.Borrower_s_First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrower&apos;s First Name</label>
    <type>Text</type>
</CustomField>