force-app/main/default/objects/genesis__Application_Document_Category__c/fields/Box_URl__c.field-meta.xml
<CustomField>
    <fullName>Box_URl__c</fullName>
    <label>Box URL</label>
    <type>Url</type>
</CustomField>