force-app/main/default/objects/genesis__Application_Document_Category__c/fields/Box_URL_array__c.field-meta.xml
<CustomField>
    <fullName>Box_URL_array__c</fullName>
    <label>Box URL array</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>