force-app/main/default/objects/genesis__Application_Document_Category__c/fields/Cleared_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cleared_Reason__c</fullName>
    <label>Cleared Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>