force-app/main/default/objects/genesis__Application_Document_Category__c/fields/Deliver_Status__c.field-meta.xml
<CustomField>
    <fullName>Deliver_Status__c</fullName>
    <description>Used in Loan Origination Package - Deliver Documents From CLS to Push the documents to Box</description>
    <label>Deliver Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>