force-app/main/default/objects/genesis__Application_Document_Category__c/fields/Doc_Code_as_for_Investors__c.field-meta.xml
<CustomField>
    <fullName>Doc_Code_as_for_Investors__c</fullName>
    <formula>genesis__Document_Category__r.Code_FF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc Code as for Investors</label>
    <type>Text</type>
</CustomField>