force-app/main/default/objects/genesis__Application_Document_Category__c/fields/Doc_Upload_Notification__c.field-meta.xml
<CustomField>
    <fullName>Doc_Upload_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doc Upload Notification</label>
    <type>Checkbox</type>
</CustomField>