force-app/main/default/objects/genesis__Application_Document_Category__c/fields/Doc_URL__c.field-meta.xml
<CustomField>
    <fullName>Doc_URL__c</fullName>
    <label>Doc_URL</label>
    <type>Url</type>
</CustomField>