force-app/main/default/objects/genesis__Application_Document_Category__c/fields/genesis__Active__c.field-meta.xml
<CustomField>
    <fullName>genesis__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>