force-app/main/default/objects/genesis__Application_Document_Category__c/fields/genesis__Application__c.field-meta.xml
<CustomField>
    <fullName>genesis__Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Application Document Category</relationshipLabel>
    <relationshipName>Application_Document_Category</relationshipName>
    <type>Lookup</type>
</CustomField>