force-app/main/default/objects/genesis__Application_Document_Category__c/fields/genesis__Description__c.field-meta.xml
<CustomField>
    <fullName>genesis__Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>