force-app/main/default/objects/genesis__Application_Document_Category__c/fields/genesis__Email__c.field-meta.xml
<CustomField>
    <fullName>genesis__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>