force-app/main/default/objects/genesis__Application_Document_Category__c/fields/genesis__Id__c.field-meta.xml
<CustomField>
    <fullName>genesis__Id__c</fullName>
    <description>Unique Id</description>
    <label>Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>