force-app/main/default/objects/genesis__Application_Document_Category__c/fields/genesis__Parent_Application_Document_Category__c.field-meta.xml
<CustomField>
    <fullName>genesis__Parent_Application_Document_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Application Document Category</label>
    <referenceTo>genesis__Application_Document_Category__c</referenceTo>
    <relationshipLabel>Application Document Category</relationshipLabel>
    <relationshipName>Application_Document_Category</relationshipName>
    <type>Lookup</type>
</CustomField>