force-app/main/default/objects/genesis__Application_Document_Category__c/fields/genesis__Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>genesis__Parent_Id__c</fullName>
    <label>Parent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>