force-app/main/default/objects/genesis__Application_Document_Category__c/fields/genesis__Party__c.field-meta.xml
<CustomField>
    <fullName>genesis__Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Party responsible for providing the document.</description>
    <label>Responsible Party</label>
    <referenceTo>clcommon__Party__c</referenceTo>
    <relationshipLabel>Application Document Category</relationshipLabel>
    <relationshipName>Application_Document_Category</relationshipName>
    <type>Lookup</type>
</CustomField>