force-app/main/default/objects/genesis__Application_Document_Category__c/fields/genesis__Party_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Party_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party Type</label>
    <referenceTo>clcommon__Party_Type__c</referenceTo>
    <relationshipLabel>Application Document Category</relationshipLabel>
    <relationshipName>Application_Document_Category</relationshipName>
    <type>Lookup</type>
</CustomField>