force-app/main/default/objects/genesis__Application_Document_Category__c/fields/genesis__Review_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>genesis__Review_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Document_Category</relationshipName>
    <type>Lookup</type>
</CustomField>