force-app/main/default/objects/genesis__Application_Document_Category__c/fields/genesis__Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>genesis__Review_Comments__c</fullName>
    <label>Review Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>