force-app/main/default/objects/genesis__Application_Document_Category__c/fields/genesis__Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>genesis__Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Document_Category1</relationshipName>
    <type>Lookup</type>
</CustomField>