force-app/main/default/objects/genesis__Application_Document_Category__c/fields/genesis__Send_Notification__c.field-meta.xml
<CustomField>
    <fullName>genesis__Send_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Notification</label>
    <type>Checkbox</type>
</CustomField>