force-app/main/default/objects/genesis__Application_Document_Category__c/fields/genesis__Status__c.field-meta.xml
<CustomField>
    <fullName>genesis__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OPEN</fullName>
                <default>true</default>
                <label>OPEN</label>
            </value>
            <value>
                <fullName>SUBMITTED</fullName>
            </value>
            <value>
                <fullName>CLEARED</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>