force-app/main/default/objects/genesis__Application_Document_Category__c/fields/Investor_Code__c.field-meta.xml
<CustomField>
    <fullName>Investor_Code__c</fullName>
    <formula>genesis__Application__r.Investor__r.Investor_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investor Code</label>
    <type>Text</type>
</CustomField>