force-app/main/default/objects/genesis__Application_Document_Category__c/fields/Last2characters_forSorting__c.field-meta.xml
<CustomField>
    <fullName>Last2characters_forSorting__c</fullName>
    <formula>MID(Name,(LEN(Name)-1) , LEN(Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last2characters_forSorting</label>
    <type>Text</type>
</CustomField>