force-app/main/default/objects/genesis__Application_Document_Category__c/fields/Member_Email__c.field-meta.xml
<CustomField>
    <fullName>Member_Email__c</fullName>
    <formula>genesis__Application__r.genesis__Account__r.cnotify__Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Email</label>
    <type>Text</type>
</CustomField>