force-app/main/default/objects/genesis__Application_Document_Category__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paystub - not recent</fullName>
            </value>
            <value>
                <fullName>ID Expired</fullName>
            </value>
            <value>
                <fullName>Too Blurry</fullName>
            </value>
            <value>
                <fullName>Image Cut Off</fullName>
            </value>
            <value>
                <fullName>Statement - not PDF</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Password</fullName>
            </value>
            <value>
                <fullName>Non-color ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>