force-app/main/default/objects/genesis__Application_Document_Category__c/fields/Rejection_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reasons__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Accept: Additional Docs</fullName>
            </value>
            <value>
                <fullName>Accept: Previous Statement</fullName>
            </value>
            <value>
                <fullName>Accept: Primary Statement</fullName>
            </value>
            <value>
                <fullName>Accept: More Recent Statement</fullName>
            </value>
            <value>
                <fullName>Accept: Not Personal Account</fullName>
            </value>
            <value>
                <fullName>Accept: Previous Paystub</fullName>
            </value>
            <value>
                <fullName>Statement: Missing Pages</fullName>
            </value>
            <value>
                <fullName>Statement: Not PDF</fullName>
            </value>
            <value>
                <fullName>Statement: Not Recent</fullName>
            </value>
            <value>
                <fullName>Paystub: Not Recent</fullName>
            </value>
            <value>
                <fullName>ID: Expired</fullName>
            </value>
            <value>
                <fullName>ID: Non-color</fullName>
            </value>
            <value>
                <fullName>ID: Security Image</fullName>
            </value>
            <value>
                <fullName>Blurry/Glare/Dark</fullName>
            </value>
            <value>
                <fullName>Image Cut Off</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Password Protected</fullName>
            </value>
            <value>
                <fullName>Linked Account: Too few transactions</fullName>
            </value>
            <value>
                <fullName>Linked Account: Did not link properly - Please try again</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
                <isActive>false</isActive>
                <label>Reject</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>