force-app/main/default/objects/genesis__Application_Document_Category__c/fields/ShareBoxLink__c.field-meta.xml
<CustomField>
    <fullName>ShareBoxLink__c</fullName>
    <label>ShareBoxLink</label>
    <type>Url</type>
</CustomField>