force-app/main/default/objects/genesis__Application_Document_Category__c/validationRules/Box_Url_Cannot_be_Shared_Url.validationRule-meta.xml
<ValidationRule>
    <fullName>Box_Url_Cannot_be_Shared_Url</fullName>
    <active>true</active>
    <errorConditionFormula>IF( CONTAINS( Box_URl__c , &apos;/s/&apos;),true,false)</errorConditionFormula>
    <errorDisplayField>Box_URl__c</errorDisplayField>
    <errorMessage>Please enter a valid, NON-shared box URL</errorMessage>
</ValidationRule>