force-app/main/default/objects/genesis__Application_Document_Category__c/validationRules/CSN_and_TIL_can_not_be_required.validationRule-meta.xml
<ValidationRule>
    <fullName>CSN_and_TIL_can_not_be_required</fullName>
    <active>true</active>
    <errorConditionFormula>IF(((Name =&apos;Credit Score Notice&apos;||Name =&apos;Adverse Action Notice&apos;|| Name =&apos;TIL Document&apos;) &amp;&amp; (genesis__Required__c  = true)), true, false)</errorConditionFormula>
    <errorDisplayField>genesis__Required__c</errorDisplayField>
    <errorMessage>You can not make this document required!</errorMessage>
</ValidationRule>