force-app/main/default/objects/genesis__Application_Document_Category__c/validationRules/Rejection_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_Required</fullName>
    <active>true</active>
    <description>A Document cannot be Rejected without providing appropriate Rejection Reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(genesis__Status__c, &apos;REJECTED&apos;),
 ISPICKVAL(Rejection_Reasons__c, &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Rejection_Reasons__c</errorDisplayField>
    <errorMessage>Rejection Reason must be selected to Reject Documents</errorMessage>
</ValidationRule>