force-app/main/default/objects/genesis__Application_Document_Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>genesis__Description__c</columns>
    <columns>genesis__Application__c</columns>
    <columns>Box_URl__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>genesis__Application__c</field>
        <operation>equals</operation>
        <value>APP-0001096681</value>
    </filters>
    <label>All</label>
</ListView>